Add glitches initiated by stub1 program (StubClient), disabled hud_overlap initiated TNT and EventHandlerTick events

--- a/src/main/resources/assets/mod1/lang/en_US.lang
+++ b/src/main/resources/assets/mod1/lang/en_US.lang
@@ -1,4 +1,5 @@
 msg.message_name.txt=Hello From Server. Have a pig!
+msg.login.txt=Hello from server. Get ready to run!
 tile.mbe01_block_simple.name=MBE01 Block Simple
 tile.mbe02_block_partial.name=MBE02 Block Partial
 tile.mbe03_block_variants.red.name=MBE03 Block Variants Red
